fixed picture overlaps and sizes

--- a/my-app/src/Eboard/Eboard.css
+++ b/my-app/src/Eboard/Eboard.css
@@ -15,7 +15,7 @@
 }
 .eboard-pic {
   width: 100%;
-  height: 130vh;
+  max-height: 130vh;
 }
 
 .Eboard-header p {
