--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -23,17 +23,14 @@
 .box1 {
   color: #f26534;
   background-color: rgb(0, 31, 91, 100);
-  font-weight: 600;
   padding-top: 30px;
-  padding-bottom: 30px;
 }
 .box1 p {
-  font-weight: 750;
-  height: 8vh;
-  display: grid;
-  border-radius: 10px;
+  max-height: 50vh;
+  min-height: 18vh;
   padding: 10px;
-  margin-bottom: 50px;
+  /* border: solid; */
+  font-size: medium;
 }
 .box2 {
   background-color: #72a9be;
@@ -51,27 +48,23 @@
   padding: 10px;
   margin-bottom: 50px;
 }
-.Column1 {
-  float: left;
-  width: 50%;
-}
+
 .Column2 {
   float: left;
   width: 20%;
-  padding: 10px;
+  /* padding: 10px; */
 }
 .Row:after {
   content: "";
-  display: table;
   clear: both;
 }
 .Column-pictures1 {
   display: block;
   width: 100%;
-  height: 70%;
-  padding: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  max-height: 70vh;
+  padding: 10px;
+  /* margin-left: auto;
+  margin-right: auto; */
   border-radius: 10%;
 }
 
@@ -80,7 +73,7 @@
   font-size: 18px;
   text-align: left;
 }
-@media screen and (max-width: 1125px) {
+/* @media screen and (max-width: 1125px) {
   .Column1 {
     width: 100%;
   }
@@ -89,15 +82,11 @@
   .Column2 {
     width: 100%;
   }
-}
+} */
 
 .slide-container {
   width: 100%;
   margin: auto;
-}
-
-h3 {
-  text-align: center;
 }
 
 .each-slide > div {
